Added post categories Added post archive page

--- a/_posts/2019-11-01-ST703-ANCOVA.md
+++ b/_posts/2019-11-01-ST703-ANCOVA.md
@@ -4,6 +4,7 @@ comments: false
 title: Example Problems on ANCOVA
 description: ST703 Homework 7 on ANCOVA
 tags: ST703 SAS Regression ANCOVA Examples Statistics
+category: ST703
 ---
 
 Problems: 1, 2, 3, 4
