--- a/_posts/2019-10-19-ST703-ANOVA.md
+++ b/_posts/2019-10-19-ST703-ANOVA.md
@@ -4,6 +4,7 @@ comments: false
 title: Example Problems on ANOVA
 description: ST703 Homework 5 on ANOVA
 tags: ST703 SAS Regression ANOVA Examples Statistics
+category: ST703
 ---
 
 Problems: 1, 2, 3, 4, 5, 6
