Fixed pdf calculation

--- a/_posts/2020-03-24-ST702-LRT-UMP.md
+++ b/_posts/2020-03-24-ST702-LRT-UMP.md
@@ -176,29 +176,26 @@ $$
 # 8.19
 **The random variable $X$ has pdf $f(x) = e^{-x}, x > 0$. One observation is obtained on the random variable $Y = X^\theta$, and a test of $H_0: \theta = 1 \text{ vs. } H_1: \theta = 2$ needs to be constructed. Find the UMP level $\alpha = 0.10$ test and compute the Type II Error probability.**
 
-We need to find the PDF of $Y$. We can do this through the CDF of $X$.
+Under $H_0$, $Y = X$. So $f_Y = f_X$.
+
+Under $H_1$,
 
 $$
 \begin{align}
-F_X(x) & = \int_{-\infty}^{x} f(t) dt \\
-	& = \int_{-\infty}^x e^{-t} dt \\
-	& = -e^{-x} \\ \\
-F_Y(y) & = P(Y \leq y) \\
-	&= P( X^\theta \leq y) \\
-	& = P( \theta \log(X) \leq \log(y)) \\
-	& = P(\log(X) \leq \frac{ 1 }{ \theta } \log(y)) \\
-	& = P(X \leq y^{1/\theta}) \\
-	& = F_X(y^{1/\theta}) \\ \\
-f(y) & = F_X(y^{1/\theta}) \frac{ 1 }{ \theta } y^{1/\theta - 1} \\
-	& = \frac{ 1 }{ \theta } y^{1/\theta - 1} e^{y^{1/\theta}}
+F_Y & = P(Y \leq y) \\
+	& = P(X^2 \leq y)\\
+	& = P(-\sqrt{ y } \leq X \leq \sqrt{ y }) \\
+	& = P(X \leq \sqrt{ y }) & y > 0 \\
+	& = F_X(\sqrt{ y }) \\ \\
+f_y & = \frac{ 1 }{ \sqrt{ y } } f_X(\sqrt{ y }) \\
+	& = \frac{ 1 }{ 2 \sqrt{ y } } e^{-\sqrt{ y }}
 \end{align}
 $$
-
 
 Then our UMP test will reject if
 
 $$
-k < \frac{ f(y|2) }{ f(y|1) } = \frac{ \frac{ 1 }{ 2 } y^{1/2 - 1} e^{y^{-1/2}} }{ \frac{ 1 }{ 1 } y^{1/1 - 1} e^{y^-1/1} } = \frac{ 1 }{ 2 } y^{-1/2} e^{y-y^{1/2}}.
+k < \frac{ f_y(y | \theta = 2) }{ f_y(y | \theta = 1) } = \frac{  \frac{ 1 }{ 2 \sqrt{ y } } e^{-\sqrt{ y }} }{ e^{-y} } = \frac{ e^{-\sqrt{ y } +y } }{ 2\sqrt{ y } }
 $$
 
 Taking the derivative of this ratio and setting it to 0 gives $y=1$. Plugging in $y=0.5$ to the derivative gives -0.81 and plugging $y=3$ into the derivative gives 1.11745. Thus, the ratio is decreasing before 1 and increasing after 1. This gives a rejection region of $y \leq c_1$ and $y \geq c_2$. We will reject with $\alpha = 0.10$ if
