--- a/_posts/2020-04-06-ST702-MLR-UMP.md
+++ b/_posts/2020-04-06-ST702-MLR-UMP.md
@@ -315,11 +315,11 @@ We can now construct our LRT.
 $$
 \begin{align}
 \lambda(x,y) & = \frac{ (2 \pi \widehat \sigma_0^2)^{-(n+m)/2} e^{-\frac{ \sum_{i=1}^n (x_i - \widehat \mu)^2 + \sum_{i=1}^m (y_i -\widehat \mu)^2}{ 2 \widehat \sigma_0^2 }} }{ (2 \pi \widehat \sigma^2)^{-(n+m)/2} e^{-\frac{ \sum_{i=1}^n (x_i -\overline{ x })^2 + \sum_{i=1}^m (y_i -\overline{ y })^2}{ 2 \widehat \sigma^2 }}  } \\
-	& = \Big( \frac{ \hat \sigma_0^2 }{ \widehat \sigma^2 }\Big)^{-\frac{ m+n }{ 2 }} 
+	& = \Big( \frac{ \hat \sigma_0^2 }{ \widehat \sigma^2 }\Big)^{-\frac{ m+n }{ 2 }}
 \end{align}
 $$
 
-The LRT rejects if $\frac{ \hat \sigma_0^2 }{ \widehat \sigma^2 }\Big) > k$.
+(I messed up my simplification somewhere, so I'll take the one from Casella-Berger so we can move on.) The LRT rejects if $\Big( \frac{ \hat \sigma_0^2 }{ \widehat \sigma^2 }\Big) > k$.
 
 Substituting in $\widehat \mu$ into $\widehat \sigma_0^2$ yields
 
