--- a/_posts/2020-04-06-ST702-MLR-UMP.md
+++ b/_posts/2020-04-06-ST702-MLR-UMP.md
@@ -361,7 +361,8 @@ $$
 
 **Use the two-sample $t$ test to determine if the mean age of the core is the same as the mean age of the periphery.**
 
-Python code for this problem can be found here: https://github.com/JimmyJHickey/grad-scripts/blob/master/st702-statistical-theory-2/hw9-MLR-UMP/calc_t.py
+Python code for this problem can be found here: [https://github.com/JimmyJHickey/grad-scripts/blob/master/st702-statistical-theory-2/hw9-MLR-UMP/calc_t.py](https://github.com/JimmyJHickey/grad-scripts/blob/master/st702-statistical-theory-2/hw9-MLR-UMP/calc_t.py).
+
 
 ```
 from math import sqrt
