finished work on hw1

--- a/_posts/2019-03-29-hi-jimmy.md
+++ b/_posts/2019-03-29-hi-jimmy.md
@@ -4,6 +4,7 @@ comments: true
 title: Hi -Jimmy
 description: Welcome to my website!
 category: Misc
+published: false
 ---
 
 Hi and welcome to my website! I'm Jimmy Hickey. I'm a computer programmer, a hopeful statistician/data scientist, and a future PhD student. 
