fixed latex error

--- a/_posts/2020-04-06-ST702-MLR-UMP.md
+++ b/_posts/2020-04-06-ST702-MLR-UMP.md
@@ -341,7 +341,7 @@ $$
 T = \frac{ \frac{ \overline{ X} - \overline{ Y } }{ \sqrt{ \frac{ 1 }{ n } + \frac{ 1 }{ m } } } }{ \sqrt{ S_p^2 (\frac{ 1 }{ n } + \frac{ 1 }{ m }) } } = \frac{ \overline{ X} - \overline{ Y } }{ \sqrt{ \frac{ 1 }{ n+m-2 }\Big( \sum_{i=1}^n (X_i - \overline{ X })^2 + \sum_{i=1}^m (Y_i - \overline{ Y })^2  \Big) } } 
 $$
 
-Under $H_0$ both $X$ and $Y$ follow the same normal distribution, so $\overline{ X } - \overline{ Y } \sim N(0, \sigma^2 (\frac{ 1 }{ n } + \frac{ 1 }{ m })$ (we are scaling the variance). In the denominator, notice that $\sum_{i=1}^n (X_i - \overline{ X })^2 \sim \chi^2_{n-1}$ and $\sum_{i=1}^m (Y_i - \overline{ Y})^2 \sim \chi^2_{m-1}$. Adding these together gives a $\chi^2_{n+m-2}$ distribution. Notice that this distribution is being divided by it's degrees of freedom and square-rooted. This is ratio is the definition of a $t_{n+m-2}$ distribution.
+Under $H_0$ both $X$ and $Y$ follow the same normal distribution, so $\overline{ X } - \overline{ Y } \sim N(0, \sigma^2 (\frac{ 1 }{ n } + \frac{ 1 }{ m })$ (we are scaling the variance). In the denominator, notice that $\sum\_{i=1}^n (X\_i - \overline{ X })^2 \sim \chi^2\_{n-1}$ and $\sum\_{i=1}^m (Y\_i - \overline{ Y})^2 \sim \chi^2\_{m-1}$. Adding these together gives a $\chi^2\_{n+m-2}$ distribution. Notice that this distribution is being divided by it's degrees of freedom and square-rooted. This is ratio is the definition of a $t_{n+m-2}$ distribution.
 
 ## c
 **Samples of wood were obtained from the core and periphery of a certain Byzantine church. The date of the wood was determined, giving the following data.**
